--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,8 +14,9 @@
     <body>
         <div class="menu d-flex">
             <ul class="list-inline mx-auto justify-content-center">
-                <li class="list-inline-item mx-5"><a href="{{ path('app_index') }}"><img src="../../assets/img/logo.jpg" class="w-25" alt="Logo Poutinerie"/></a></li>
-                <li class="list-inline-item mx-5"><a href="{{ path('app_index') }}">Notre Menu</a></li>
+                <li class="list-inline-item mx-5"><a href="{{ path('app_index') }}"><img src="{{ asset('build/images/logo.jpg') }}" class="w-25" alt="Logo Poutinerie"/></a></li>
+                <li class="list-inline-item mx-5"><a href="{{ path('app_produit_index') }}">Notre Menu</a></li>
+                <li class="list-inline-item mx-5"><a href="{{ path('app_categorie_index') }}">Categories</a></li>
                 <li class="list-inline-item mx-5"><a href="{{ path('app_index') }}">Où nous trouver</a></li>
                 <li class="list-inline-item mx-5"><a href="{{ path('app_index') }}">Nous contacter</a></li>
                 <li class="list-inline-item mx-5"><a href="{{ path('app_login') }}">Administration</a></li>
