Change carousel images to use assets

--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -20,21 +20,21 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="../../assets/images/poutine.jpg" class="d-block rounded img-fluid w-100" alt="p1">
+                <img src="{{ asset('images/poutine.jpg') }}" class="d-block rounded img-fluid w-100" alt="p1">
                 <div class="carousel-caption d-none d-md-block">
                     <h5 class="text-black">La Poutine unique</h5>
                     <p class="text-black">A la Canadienne ou Française</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="../../assets/images/frais.jpg" class="d-block rounded img-fluid w-100" alt="p2">
+                <img src="{{ asset('images/frais.jpg') }}" class="d-block rounded img-fluid w-100" alt="p2">
                 <div class="carousel-caption d-none d-md-block">
                     <h5 class="text-black">Produits Frais</h5>
                     <p class="text-black">Fait avec 100% de produits frais</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="../../assets/images/viande-francaise.jpg" class="d-block rounded img-fluid w-100" alt="p3">
+                <img src="{{ asset('images/viande-francaise.jpg') }}" class="d-block rounded img-fluid w-100" alt="p3">
                 <div class="carousel-caption d-none d-md-block">
                     <h5 class="text-black">Viande Française</h5>
                     <p class="text-black">La viande est française et fraiche</p>
