Add Entities for Menu and started Template for Menu

--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello IndexController!{% endblock %}
+{% block title %}La Quebecoise{% endblock %}
 
 {% block body %}
     <style>
@@ -18,8 +18,8 @@
     </style>
 
     <div class="example-wrapper">
-        <h1 class="text-center">La Poutinerie, Le FoodTruck</h1>
-        <h2 class="text-center">Le Canada en Normandie</h2>
+        <h1 class="text-center">La Québecoise, Le FoodTruck</h1>
+        <h2 class="text-center">Le Québec en Normandie</h2>
         <br/>
         <div id="carl-index" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
