--- a/templates/produit/index.html.twig
+++ b/templates/produit/index.html.twig
@@ -8,9 +8,9 @@
     <table class="table">
         <thead>
             <tr>
-                <th>Catégorie</th>
+                <th>Id</th>
                 <th>Nom</th>
-                <th>Descr</th>
+                <th>Description</th>
                 <th>Prix</th>
                 <th>actions</th>
             </tr>
@@ -18,10 +18,10 @@
         <tbody>
         {% for produit in produits %}
             <tr>
-                <td>{{ produit.categorie }}</td>
+                <td>{{ produit.id }}</td>
                 <td>{{ produit.nom }}</td>
-                <td>{{ produit.descr }}</td>
-                <td>{{ produit.prix }} €</td>
+                <td>{{ produit.description }}</td>
+                <td>{{ produit.prix }}</td>
                 <td>
                     <a href="{{ path('app_produit_show', {'id': produit.id}) }}">show</a>
                     <a href="{{ path('app_produit_edit', {'id': produit.id}) }}">edit</a>
