--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,9 +15,8 @@
         <div class="menu d-flex">
             <ul class="list-inline mx-auto justify-content-center">
                 <li class="list-inline-item mx-5"><a href="{{ path('app_index') }}"><img src="{{ asset('images/logo.jpg') }}" class="w-25" alt="Logo Poutinerie"/></a></li>
-                <li class="list-inline-item mx-5"><a href="{{ path('app_produit_index') }}">Notre Menu</a></li>
-                <li class="list-inline-item mx-5"><a href="{{ path('app_categorie_index') }}">Categories</a></li>
-                <li class="list-inline-item mx-5"><a href="{{ path('app_index') }}">Où nous trouver</a></li>
+                <li class="list-inline-item mx-5"><a href="{{ path('app_menu_index') }}">Notre Menu</a></li>
+                <li class="list-inline-item mx-5"><a href="{{ path('app_produit_index') }}">Où nous trouver</a></li>
                 <li class="list-inline-item mx-5"><a href="{{ path('app_index') }}">Nous contacter</a></li>
                 <li class="list-inline-item mx-5"><a href="{{ path('app_login') }}">Administration</a></li>
             </ul>
