--- a/templates/menu/show.html.twig
+++ b/templates/menu/show.html.twig
@@ -18,9 +18,9 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_categorie_index') }}">back to list</a>
+    <a href="{{ path('app_menu_index') }}">back to list</a>
 
-    <a href="{{ path('app_categorie_edit', {'id': categorie.id}) }}">edit</a>
+    <a href="{{ path('app_menu_edit', {'id': categorie.id}) }}">edit</a>
 
-    {{ include('categorie/_delete_form.html.twig') }}
+    {{ include('menu/_delete_form.html.twig') }}
 {% endblock %}
