--- a/templates/produit/show.html.twig
+++ b/templates/produit/show.html.twig
@@ -16,8 +16,8 @@
                 <td>{{ produit.nom }}</td>
             </tr>
             <tr>
-                <th>Descr</th>
-                <td>{{ produit.descr }}</td>
+                <th>Description</th>
+                <td>{{ produit.description }}</td>
             </tr>
             <tr>
                 <th>Prix</th>
