--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,3 +1,37 @@
+@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
+
 body {
-    background-color: darkgoldenrod;
+    text-transform: uppercase;
+    font-family: 'Permanent Marker', cursive;
+    background-color: #a774fc;
+    font-size: small;
+}
+
+.carousel {
+    margin: 1em auto;
+    max-width: 800px;
+    width: 95%;
+}
+
+.menu {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 10px;
+    text-align: center;
+}
+
+.pied {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 10px;
+    text-align: center;
+}
+
+.frites {
+    margin: auto;
+    text-align: center;
+}
+
+.logo {
+    margin-left: 20em;
 }
