--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,26 +1,29 @@
 <!DOCTYPE html>
 <html lang="fr">
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
-        {% block stylesheets %}
-            {{ encore_entry_link_tags('app') }}
-        {% endblock %}
-        {% block javascripts %}
-            {{ encore_entry_script_tags('app') }}
-        {% endblock %}
-    </head>
-    <body>
-        <div class="menu d-flex">
-            <ul class="list-inline mx-auto justify-content-center">
-                <li class="list-inline-item mx-5"><a href="{{ path('app_index') }}"><img src="{{ asset('images/logo.jpg') }}" class="w-25" alt="Logo Poutinerie"/></a></li>
-                <li class="list-inline-item mx-5"><a href="{{ path('app_menu_index') }}">Notre Menu</a></li>
-                <li class="list-inline-item mx-5"><a href="{{ path('app_produit_index') }}">Où nous trouver</a></li>
-                <li class="list-inline-item mx-5"><a href="{{ path('app_index') }}">Nous contacter</a></li>
-                <li class="list-inline-item mx-5"><a href="{{ path('app_login') }}">Administration</a></li>
-            </ul>
-        </div>
-        {% block body %}{% endblock %}
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <title>{% block title %}Welcome!{% endblock %}</title>
+    <link rel="icon"
+          href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
+    {% block stylesheets %}
+        {{ encore_entry_link_tags('app') }}
+    {% endblock %}
+    {% block javascripts %}
+        {{ encore_entry_script_tags('app') }}
+    {% endblock %}
+</head>
+<body>
+<div class="menu d-flex">
+    <ul class="list-inline mx-auto justify-content-center">
+        <li class="list-inline-item mx-5"><a href="{{ path('app_index') }}"><img src="{{ asset('images/logo.jpg') }}"
+                                                                                 class="w-25"
+                                                                                 alt="Logo Poutinerie"/></a></li>
+        <li class="list-inline-item mx-5"><a href="{{ path('app_menu_index') }}">Notre Menu</a></li>
+        <li class="list-inline-item mx-5"><a href="{{ path('app_menu_new') }}">Où nous trouver</a></li>
+        <li class="list-inline-item mx-5"><a href="{{ path('app_index') }}">Nous contacter</a></li>
+        <li class="list-inline-item mx-5"><a href="{{ path('app_login') }}">Administration</a></li>
+    </ul>
+</div>
+{% block body %}{% endblock %}
+</body>
 </html>
