--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -3,22 +3,8 @@
 {% block title %}La Quebecoise{% endblock %}
 
 {% block body %}
-    <style>
-        .example-wrapper {
-            margin: 1em auto;
-            max-width: 800px;
-            width: 95%;
-            font: 18px/1.5 sans-serif;
-        }
-
-        .example-wrapper code {
-            background: #F5F5F5;
-            padding: 2px 6px;
-        }
-    </style>
-
-    <div class="example-wrapper">
-        <h1 class="text-center">La Québecoise, Le FoodTruck</h1>
+    <div class="wrapper">
+        <h1 id="titre" class="text-center">La Québecoise</h1>
         <h2 class="text-center">Le Québec en Normandie</h2>
         <br/>
         <div id="carl-index" class="carousel slide" data-bs-ride="carousel">
