--- a/templates/menu/edit.html.twig
+++ b/templates/menu/edit.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Categorie{% endblock %}
+{% block title %}Edit Produit{% endblock %}
 
 {% block body %}
-    <h1>Edit Categorie</h1>
+    <h1>Edit Produit</h1>
 
     {{ include('menu/_form.html.twig', {'button_label': 'Update'}) }}
 
