--- a/templates/menu/new.html.twig
+++ b/templates/menu/new.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Categorie{% endblock %}
+{% block title %}New Produit{% endblock %}
 
 {% block body %}
-    <h1>Create new Categorie</h1>
+    <h1>Create new Produit</h1>
 
     {{ include('menu/_form.html.twig') }}
 
