--- a/templates/menu/show.html.twig
+++ b/templates/menu/show.html.twig
@@ -1,26 +1,42 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Categorie{% endblock %}
+{% block title %}Produit{% endblock %}
 
 {% block body %}
-    <h1>Categorie</h1>
+    <h1>Produit</h1>
 
     <table class="table">
         <tbody>
             <tr>
                 <th>Id</th>
-                <td>{{ categorie.id }}</td>
+                <td>{{ produit.id }}</td>
             </tr>
             <tr>
                 <th>Nom</th>
-                <td>{{ categorie.nom }}</td>
+                <td>{{ produit.nom }}</td>
+            </tr>
+            <tr>
+                <th>Description</th>
+                <td>{{ produit.description }}</td>
+            </tr>
+            <tr>
+                <th>HasDescription</th>
+                <td>{{ produit.hasDescription ? 'Yes' : 'No' }}</td>
+            </tr>
+            <tr>
+                <th>Prix</th>
+                <td>{{ produit.prix }}</td>
+            </tr>
+            <tr>
+                <th>Type</th>
+                <td>{{ produit.type }}</td>
             </tr>
         </tbody>
     </table>
 
     <a href="{{ path('app_menu_index') }}">back to list</a>
 
-    <a href="{{ path('app_menu_edit', {'id': categorie.id}) }}">edit</a>
+    <a href="{{ path('app_menu_edit', {'id': produit.id}) }}">edit</a>
 
     {{ include('menu/_delete_form.html.twig') }}
 {% endblock %}
