--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -1,10 +1,10 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}La Quebecoise{% endblock %}
+{% block title %}FoodTruck, La Quebecoise{% endblock %}
 
 {% block body %}
     <div class="wrapper">
-        <h1 id="titre" class="text-center">La Québecoise</h1>
+        <h1 id="titre" class="text-center">FoodTruck, La Québecoise</h1>
         <h2 class="text-center">Le Québec en Normandie</h2>
         <br/>
         <div id="carl-index" class="carousel slide" data-bs-ride="carousel">
