--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -13,11 +13,10 @@
     {% endblock %}
 </head>
 <body>
-<div class="menu d-flex">
+<div class="navbar d-flex">
     <ul class="list-inline mx-auto justify-content-center">
         <li class="list-inline-item mx-5"><a href="{{ path('app_index') }}"><img src="{{ asset('images/logo.jpg') }}"
-                                                                                 class="w-25"
-                                                                                 alt="Logo Poutinerie"/></a></li>
+                                                                                 height="100" width="100" alt="Logo Poutinerie"/></a></li>
         <li class="list-inline-item mx-5"><a href="{{ path('app_menu_index') }}">Notre Menu</a></li>
         <li class="list-inline-item mx-5"><a href="{{ path('app_menu_new') }}">Où nous trouver</a></li>
         <li class="list-inline-item mx-5"><a href="{{ path('app_index') }}">Nous contacter</a></li>
