--- a/templates/menu/index.html.twig
+++ b/templates/menu/index.html.twig
@@ -8,34 +8,36 @@
     <div class="menu">
         <div class="container">
             <div class="plats container">
-                <h2 id="plats" class="nom">ici commence ton aventure</h2>
+                <h2 id="plats" class="titre">ici commence ton aventure</h2>
                 <br/>
                 {% for plat in plats %}
                     <div class="produit">
-                        <h3 class="nomp"><u>{{ plat.nom }}</u> {{ plat.prix }} €</h3>
+                        <h3 class="nom"><u>{{ plat.nom }}</u> {{ plat.prix }} €</h3>
+                        <a class="col-1" href="{{ path('app_menu_edit', {'id': plat.id}) }}">edit</a>
                         <br/>
                         {% if plat.hasDescription %}
-                            <h4 class="descriptionp">{{ plat.description }}</h4>
+                            <h4 class="description">{{ plat.description }}</h4>
                         {% endif %}
                     </div>
                     <br/>
                 {% endfor %}
             </div>
             <div class="viande">
-                <h4><u>Les viandes aux choix :</u></h4>
+                <h4>Les viandes aux choix :</h4>
                 <br/>
-                <h5>bacon, saucisses, hache de boeuf frias, effiloché de canard</h5>
+                <h5 class="description">bacon, saucisses, hache de boeuf frais, effiloché de canard</h5>
             </div>
             <br/>
             <div class="normands container">
-                <h2 id="normands" class="nom">l'aventure normande</h2>
+                <h2 id="normands" class="titre">l'aventure normande</h2>
                 <br/>
                 {% for normand in normands %}
                     <div class="produit">
-                        <h3 class="nomp"><u>{{ normand.nom }}</u> {{ normand.prix }} €</h3>
+                        <h3 class="nom"><u>{{ normand.nom }}</u> {{ normand.prix }} €</h3>
+                        <a class="col-1" href="{{ path('app_menu_edit', {'id': normand.id}) }}">edit</a>
                         <br/>
                         {% if normand.hasDescription %}
-                            <h4 class="descriptionp">{{ normand.description }}</h4>
+                            <h4 class="description">{{ normand.description }}</h4>
                         {% endif %}
                     </div>
                 {% endfor %}
@@ -46,16 +48,17 @@
                 <br/>
                 <br/>
                 <br/>
-                <h2 id="frites" class="nom">petite aventure</h2>
+                <h2 id="frites" class="titre"><u>petite aventure</u></h2>
                 <img class="boussole" src="{{ asset('images/boussole.png') }}"/>
                 <br/>
                 <br/>
                 <br/>
                 {% for frite in frites %}
                     <div class="produit">
-                        <h3 class="nomp">{{ frite.nom }}  {{ frite.prix }} €</h3>
+                        <h3 class="nom">{{ frite.nom }} {{ frite.prix }} €</h3>
+                        <a class="col-1" href="{{ path('app_menu_edit', {'id': frite.id}) }}">edit</a>
                         {% if frite.hasDescription %}
-                            <h4 class="descriptionp">{{ frite.description }}</h4>
+                            <h4 class="description">{{ frite.description }}</h4>
                         {% endif %}
                     </div>
                 {% endfor %}
@@ -63,42 +66,45 @@
         </div>
         <div class="container">
             <div class="autres container">
-                <h2 id="autres" class="nom"><u>un petit road trip ???</u></h2>
+                <h2 id="autres" class="titre">un petit road trip ?</h2>
                 <br/>
                 {% for autre in autres %}
                     <div class="produit">
-                        <h3 class="nomp">{{ autre.nom }}  {{ autre.prix }} €</h3>
+                        <h3 class="nom">{{ autre.nom }}  {{ autre.prix }} €</h3>
+                        <a class="col-1" href="{{ path('app_menu_edit', {'id': autre.id}) }}">edit</a>
                         <br/>
                         {% if autre.hasDescription %}
-                            <h4 class="descriptionp">{{ autre.description }}</h4>
+                            <h4 class="description">{{ autre.description }}</h4>
                         {% endif %}
                     </div>
                 {% endfor %}
             </div>
             <br/>
             <div class="desserts container">
-                <h2 id="desserts" class="nom"><u>fin de l'aventure</u></h2>
+                <h2 id="desserts" class="titre">fin de l'aventure</h2>
                 <br/>
                 {% for dessert in desserts %}
                     <div class="produit">
-                        <h3 class="nomp">{{ dessert.nom }}  {{ dessert.prix }} €</h3>
+                        <h3 class="nom">{{ dessert.nom }}  {{ dessert.prix }} €</h3>
+                        <a class="col-1" href="{{ path('app_menu_edit', {'id': dessert.id}) }}">edit</a>
                         <br/>
                         {% if dessert.hasDescription %}
-                            <h4 class="descriptionp">{{ dessert.description }}</h4>
+                            <h4 class="description">{{ dessert.description }}</h4>
                         {% endif %}
                     </div>
                 {% endfor %}
             </div>
             <br/>
             <div class="boissons container">
-                <h2 id="boissons" class="nom"><u>les breuvages !!!</u></h2>
+                <h2 id="boissons" class="titre">les breuvages !</h2>
                 <br/>
                 {% for boisson in boissons %}
                     <div class="produit">
-                        <h3 class="nomp ">{{ boisson.nom }}  {{ boisson.prix }} €</h3>
+                        <h3 class="nom">{{ boisson.nom }}  {{ boisson.prix }} €</h3>
+                        <a class="col-1" href="{{ path('app_menu_edit', {'id': boisson.id}) }}">edit</a>
                         <br/>
                         {% if boisson.hasDescription %}
-                            <h4 class="descriptionp">{{ boisson.description }}</h4>
+                            <h4 class="description">{{ boisson.description }}</h4>
                         {% endif %}
                     </div>
                 {% endfor %}
@@ -108,10 +114,13 @@
     <h3 id="voyage">Bon voyage !</h3>
     <div class="pied">
         <img class="logo w-25" src="{{ asset('images/logo.jpg') }}" alt="logo"/>
-        <img class="frites w-25" src="{{ asset('images/poutine.png') }}" alt="frite"/>
+        <img class="imgfrite w-25" src="{{ asset('images/poutine.png') }}" alt="frite"/>
         <div class="coordonnes">
-            <h4>quebecfrance@gmail.com</h4>
-            <h4>0783320224</h4>
+            <p>
+                Nous contacter : <br/>
+                quebecfrance@gmail.com <br/>
+                0783320224
+            </p>
         </div>
         <h4 class="alcool">* l'abus d'alcool est dangereux pour la santé, à consommer avec modération</h4>
     </div>
