--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>{% block title %}Welcome!{% endblock %}</title>
+    <title>{% block title %}FoodTruck, La Quebecoise!{% endblock %}</title>
     <link rel="icon"
           href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
     {% block stylesheets %}
@@ -18,9 +18,9 @@
         <li class="list-inline-item mx-5"><a href="{{ path('app_index') }}"><img src="{{ asset('images/logo.jpg') }}"
                                                                                  height="100" width="100" alt="Logo Poutinerie"/></a></li>
         <li class="list-inline-item mx-5"><a href="{{ path('app_menu_index') }}">Notre Menu</a></li>
-        <li class="list-inline-item mx-5"><a href="{{ path('app_menu_new') }}">Où nous trouver</a></li>
+        <li class="list-inline-item mx-5"><a href="{{ path('app_map') }}">Où nous trouver</a></li>
         <li class="list-inline-item mx-5"><a href="{{ path('app_index') }}">Nous contacter</a></li>
-        <li class="list-inline-item mx-5"><a href="{{ path('app_login') }}">Administration</a></li>
+        <li class="list-inline-item mx-5"><a href="{{ path('app_admin') }}">Administration</a></li>
     </ul>
 </div>
 {% block body %}{% endblock %}
