--- a/templates/location/edit.html.twig
+++ b/templates/location/edit.html.twig
@@ -1,13 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Location{% endblock %}
-
 {% block body %}
-    <h1>Edit Location</h1>
+    <div class="container align-content-center text-center">
+        <h1>Modifier une Location</h1>
 
-    {{ include('location/_form.html.twig', {'button_label': 'Update'}) }}
+        {{ include('location/_form.html.twig', {'button_label': 'Modifier'}) }}
 
-    <a href="{{ path('app_location_index') }}">back to list</a>
+        <a href="{{ path('app_location_index') }}">Retour à la liste</a>
 
-    {{ include('location/_delete_form.html.twig') }}
+        {{ include('location/_delete_form.html.twig') }}
+    </div>
 {% endblock %}
