--- a/templates/location/index.html.twig
+++ b/templates/location/index.html.twig
@@ -1,12 +1,11 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Location index{% endblock %}
-
 {% block body %}
-    <h1>Location index</h1>
+    <div class="container align-content-center text-center">
+        <h1>Liste des Locations</h1>
 
-    <table class="table">
-        <thead>
+        <table class="table">
+            <thead>
             <tr>
                 <th>Id</th>
                 <th>Nom</th>
@@ -15,31 +14,29 @@
                 <th>Codepostal</th>
                 <th>Pays</th>
                 <th>Description</th>
-                <th>actions</th>
+                <th>Actions</th>
             </tr>
-        </thead>
-        <tbody>
-        {% for location in locations %}
-            <tr>
-                <td>{{ location.id }}</td>
-                <td>{{ location.nom }}</td>
-                <td>{{ location.rue }}</td>
-                <td>{{ location.ville }}</td>
-                <td>{{ location.codepostal }}</td>
-                <td>{{ location.pays }}</td>
-                <td>{{ location.description }}</td>
-                <td>
-                    <a href="{{ path('app_location_show', {'id': location.id}) }}">show</a>
-                    <a href="{{ path('app_location_edit', {'id': location.id}) }}">edit</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="7">no records found</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+            </thead>
+            <tbody>
+            {% for location in locations %}
+                <tr>
+                    <td>{{ location.id }}</td>
+                    <td>{{ location.nom }}</td>
+                    <td>{{ location.rue }}</td>
+                    <td>{{ location.ville }}</td>
+                    <td>{{ location.codepostal }}</td>
+                    <td>{{ location.pays }}</td>
+                    <td>{{ location.description }}</td>
+                    <td><a href="{{ path('app_location_edit', {'id': location.id}) }}">Modifier</a></td>
+                </tr>
+            {% else %}
+                <tr>
+                    <td colspan="8">Aucune Location trouvée</td>
+                </tr>
+            {% endfor %}
+            </tbody>
+        </table>
 
-    <a href="{{ path('app_location_new') }}">Create new</a>
+        <a href="{{ path('app_location_new') }}">Créer une nouvelle Location</a>
+    </div>
 {% endblock %}
