--- a/templates/location/new.html.twig
+++ b/templates/location/new.html.twig
@@ -1,11 +1,11 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Location{% endblock %}
-
 {% block body %}
-    <h1>Create new Location</h1>
+    <div class="container text-center align-content-center">
+        <h1>Créer une nouvelle Location</h1>
 
-    {{ include('location/_form.html.twig') }}
+        {{ include('location/_form.html.twig') }}
 
-    <a href="{{ path('app_location_index') }}">back to list</a>
+        <a href="{{ path('app_location_index') }}">Retour à la liste</a>
+    </div>
 {% endblock %}
