--- a/templates/menu/edit.html.twig
+++ b/templates/menu/edit.html.twig
@@ -1,13 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Produit{% endblock %}
-
 {% block body %}
-    <h1>Edit Produit</h1>
+    <div class="container align-content-center text-center">
+        <h1>Modifier un Produit</h1>
 
-    {{ include('menu/_form.html.twig', {'button_label': 'Update'}) }}
+        {{ include('menu/_form.html.twig', {'button_label': 'Modifier'}) }}
 
-    <a href="{{ path('app_menu_index') }}">back to list</a>
+        <a href="{{ path('app_menu_list') }}">Retour à la liste</a>
 
-    {{ include('menu/_delete_form.html.twig') }}
+        {{ include('menu/_delete_form.html.twig') }}
+    </div>
 {% endblock %}
