--- a/templates/menu/new.html.twig
+++ b/templates/menu/new.html.twig
@@ -1,11 +1,11 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Produit{% endblock %}
-
 {% block body %}
-    <h1>Create new Produit</h1>
+    <div class="container align-content-center text-center">
+        <h1>Créer un nouveau Produit</h1>
 
-    {{ include('menu/_form.html.twig') }}
+        {{ include('menu/_form.html.twig') }}
 
-    <a href="{{ path('app_menu_index') }}">back to list</a>
+        <a href="{{ path('app_menu_index') }}">Retour à la liste</a>
+    </div>
 {% endblock %}
