--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -1,22 +1,43 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-<div class="wrapper">
-    <h1 id="titre" class="text-center">FoodTruck, La Québecoise</h1>
-    {% if app.user %}
-    <div class="mb-3 text-center">
-        Tu es connecté en tant que {{ app.user.username }}, <a href="{{ path('app_logout') }}">Se déconnecter</a>
-    </div>
-    {% endif %}
     <div class="container">
-        <div>
-            <h2>Gestion des Produits</h2>
-            <a href="{{ path('app_menu_list') }}">Produits</a>
-        </div>
-        <div>
-            <h2>Gestion des Locations</h2>
-            <a href="{{ path('app_location_index') }}">Locations</a>
+        <h1 id="titre" class="text-center">FoodTruck, La Québecoise</h1>
+        {% if app.user %}
+            <div class="mt-3 mb-3 text-center">
+                <h2>Tu es connecté en tant que {{ app.user.username }}, <a href="{{ path('app_logout') }}">Se
+                        déconnecter</a></h2>
+            </div>
+        {% endif %}
+        <div class="text-center">
+            <div class="row">
+                <div class="col-sm">
+                    <h3 class="text-decoration-underline">Gestion des Produits</h3>
+                    <a href="{{ path('app_produit_index') }}"><img class="border border-dark"
+                                                               src="{{ asset('images/produits.png') }}" width="250"
+                                                               alt="produits"/></a>
+                </div>
+                <div class="col-sm">
+                    <h3 class="text-decoration-underline">Gestion des Localisations</h3>
+                    <a href="{{ path('app_localisation_index') }}"><img class="border border-dark"
+                                                                        src="{{ asset('images/localisations.png') }}"
+                                                                        width="250" alt="localisations"/></a>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm">
+                    <h3 class="text-decoration-underline">Gestion des Ventes</h3>
+                    <a href="{{ path('app_vente') }}"><img class="border border-dark"
+                                                           src="{{ asset('images/ventes.png') }}" width="250"
+                                                           alt="ventes"/></a>
+                </div>
+                <div class="col-sm">
+                    <h3 class="text-decoration-underline">Gestion des Matières Premières</h3>
+                    <a href="{{ path('app_matiere_index') }}"><img class="border border-dark"
+                                                           src="{{ asset('images/achats.png') }}" width="250"
+                                                           alt="ventes"/></a>
+                </div>
+            </div>
         </div>
     </div>
-</div>
 {% endblock %}
