--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <div class="wrapper">
+    <div class="body">
         <h1 id="titre" class="text-center">FoodTruck, La Québecoise</h1>
         <h2 class="text-center">Le Québec en Normandie</h2>
         <br/>
