--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -13,16 +13,16 @@
     {% endblock %}
 </head>
 <body>
-<div class="navbar d-flex">
-    <ul class="list-inline mx-auto justify-content-center">
-        <li class="list-inline-item mx-5"><a href="{{ path('app_index') }}"><img src="{{ asset('images/logo.jpg') }}"
-                                                                                 height="100" width="100" alt="Logo Poutinerie"/></a></li>
-        <li class="list-inline-item mx-5"><a href="{{ path('app_menu_index') }}">Notre Menu</a></li>
-        <li class="list-inline-item mx-5"><a href="{{ path('app_map') }}">Où nous trouver</a></li>
-        <li class="list-inline-item mx-5"><a href="{{ path('app_index') }}">Nous contacter</a></li>
-        <li class="list-inline-item mx-5"><a href="{{ path('app_admin') }}">Administration</a></li>
+<nav class="nav">
+    <ul class="mx-auto">
+        <li><a href="{{ path('app_index') }}">Acceuil</a></li>
+        <li><a href="{{ path('app_carte_index') }}">Notre carte</a></li>
+        <li><a href="{{ path('app_map') }}">Où nous trouver</a></li>
+        <li><a href="{{ path('app_index') }}">Nous contacter</a></li>
+        <li><a href="{{ path('app_admin') }}">Administration</a></li>
     </ul>
-</div>
-{% block body %}{% endblock %}
+</nav>
+{% block body %}
+{% endblock %}
 </body>
 </html>
