--- a/templates/localisation/new.html.twig
+++ b/templates/localisation/new.html.twig
@@ -6,8 +6,8 @@
             <h1>Créer une nouvelle Localisation</h1>
 
             {{ include('localisation/_form.html.twig') }}
-
-            <a href="{{ path('app_localisation_index') }}">Retour à la liste</a>
+            <br/>
+            <a href="{{ path('app_localisation_index') }}"><button class="button">Retour à la liste</button></a>
         </div>
     </div>
 {% endblock %}
