--- a/templates/matiere/new.html.twig
+++ b/templates/matiere/new.html.twig
@@ -6,8 +6,8 @@
             <h1>Créer une nouvelle Matière Première</h1>
 
             {{ include('matiere/_form.html.twig') }}
-
-            <a href="{{ path('app_matiere_index') }}">Retour à la liste</a>
+            <br/>
+            <a href="{{ path('app_matiere_index') }}"><button class="button">Retour à la liste</button></a>
         </div>
     </div>
 {% endblock %}
