--- a/templates/produit/new.html.twig
+++ b/templates/produit/new.html.twig
@@ -6,8 +6,8 @@
             <h1>Créer un nouveau Produit</h1>
 
             {{ include('produit/_form.html.twig') }}
-
-            <a href="{{ path('app_produit_index') }}">Retour à la liste</a>
+            <br/>
+            <a href="{{ path('app_produit_index') }}"><button class="button">Retour à la liste</button></a>
         </div>
     </div>
 {% endblock %}
