--- a/templates/localisation/_delete_form.html.twig
+++ b/templates/localisation/_delete_form.html.twig
@@ -1,4 +1,4 @@
-<form method="post" action="{{ path('app_localisation_delete', {'id': location.id}) }}" onsubmit="return confirm('Voulez-vous vraiment supprimer cette Localisation ?');">
-    <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ location.id) }}">
-    <button class="btn">Supprimer</button>
+<form method="post" action="{{ path('app_localisation_delete', {'id': localisation.id}) }}" onsubmit="return confirm('Voulez-vous vraiment supprimer cette Localisation ?');">
+    <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ localisation.id) }}">
+    <button class="button">Supprimer</button>
 </form>
