--- a/templates/localisation/index.html.twig
+++ b/templates/localisation/index.html.twig
@@ -25,16 +25,17 @@
                     <td>{{ localisation.codepostal }}</td>
                     <td>{{ localisation.pays }}</td>
                     <td>{{ localisation.description }}</td>
-                    <td><a href="{{ path('app_localisation_edit', {'id': localisation.id}) }}">Modifier</a></td>
+                    <td><a href="{{ path('app_localisation_edit', {'id': localisation.id}) }}"><button class="button">Modifier</button></a></td>
+                    <td>{{ include('localisation/_delete_form.html.twig') }}</td>
                 </tr>
             {% else %}
                 <tr>
-                    <td colspan="7">Aucune Localisation trouvée</td>
+                    <td colspan="8">Aucune Localisation trouvée</td>
                 </tr>
             {% endfor %}
             </tbody>
         </table>
 
-        <a href="{{ path('app_localisation_new') }}">Créer une nouvelle Localisation</a>
+        <a href="{{ path('app_localisation_new') }}"><button class="button">Créer une nouvelle Localisation</button></a>
     </div>
 {% endblock %}
