--- a/templates/matiere/_delete_form.html.twig
+++ b/templates/matiere/_delete_form.html.twig
@@ -1,4 +1,4 @@
 <form method="post" action="{{ path('app_matiere_delete', {'id': matiere.id}) }}" onsubmit="return confirm('Voulez-vous vraiment supprimer cette Matière Première?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ matiere.id) }}">
-    <button class="btn">Supprimer</button>
+    <button class="button">Supprimer</button>
 </form>
