--- a/templates/matiere/edit.html.twig
+++ b/templates/matiere/edit.html.twig
@@ -6,10 +6,8 @@
             <h1>Modifier une Matière Première</h1>
 
             {{ include('matiere/_form.html.twig', {'button_label': 'Modifier'}) }}
-
-            <a href="{{ path('app_matiere_index') }}">Retour à la liste</a>
-
-            {{ include('matiere/_delete_form.html.twig') }}
+            <br/>
+            <a href="{{ path('app_matiere_index') }}"><button class="button">Retour à la liste</button></a>
         </div>
     </div>
 {% endblock %}
