--- a/templates/produit/_delete_form.html.twig
+++ b/templates/produit/_delete_form.html.twig
@@ -1,4 +1,4 @@
 <form method="post" action="{{ path('app_produit_delete', {'id': produit.id}) }}" onsubmit="return confirm('Voulez-vous vraiment supprimer ce Produit ?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ produit.id) }}">
-    <button class="btn">Supprimer</button>
+    <button class="button">Supprimer</button>
 </form>
