--- a/templates/produit/edit.html.twig
+++ b/templates/produit/edit.html.twig
@@ -6,10 +6,8 @@
             <h1>Modifier un Produit</h1>
 
             {{ include('produit/_form.html.twig', {'button_label': 'Modifier'}) }}
-
-            <a href="{{ path('app_produit_index') }}">Retour à la liste</a>
-
-            {{ include('produit/_delete_form.html.twig') }}
+            <br/>
+            <a href="{{ path('app_produit_index') }}"><button class="button">Retour à la liste</button></a>
         </div>
     </div>
 {% endblock %}
