--- a/templates/produit/index.html.twig
+++ b/templates/produit/index.html.twig
@@ -10,7 +10,7 @@
                 <th>Nom</th>
                 <th>Prix</th>
                 <th>Type</th>
-                <th>Actions</th>
+                <th colspan="2">Actions</th>
             </tr>
             </thead>
             <tbody>
@@ -19,7 +19,8 @@
                     <td>{{ produit.nom }}</td>
                     <td>{{ produit.prix }} €</td>
                     <td>{{ produit.type }}</td>
-                    <td><a href="{{ path('app_produit_edit', {'id': produit.id}) }}">Modifier</a></td>
+                    <td><a href="{{ path('app_produit_edit', {'id': produit.id}) }}"><button class="button">Modifier</button></a></td>
+                    <td>{{ include('produit/_delete_form.html.twig') }}</td>
                 </tr>
             {% else %}
                 <tr>
@@ -28,6 +29,6 @@
             {% endfor %}
             </tbody>
         </table>
-        <a href="{{ path('app_produit_new') }}">Créer un nouveau Produit</a>
+        <a href="{{ path('app_produit_new') }}"><button class="button">Créer un nouveau Produit</button></a>
     </div>
 {% endblock %}
