--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -30,9 +30,7 @@
                     <label for="rememberme">Se souvenir de moi</label>
                     <input type="checkbox" id="rememberme" name="_remember_me">
                 </div>
-                <div class="inputbox">
-                    <button class="btn btn-lg btn-primary" type="submit">Se connecter</button>
-                </div>
+                <button class="button" type="submit">Se connecter</button>
             </form>
         </div>
     </div>
