--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -223,10 +223,10 @@ body {
     background-size: 400% 400%;
     background: linear-gradient(
             60deg,
-            #f79533,
+            /*#f79533,
             #f37055,
             #ef4e7b,
-            #a166ab,
+            #a166ab,*/
             #5073b8,
             #1098ad,
             #07b39b,
