--- a/templates/carte/index.html.twig
+++ b/templates/carte/index.html.twig
@@ -7,37 +7,19 @@
         <div class="carte">
             <div class="container">
                 <div class="plats container">
-                    <h2 id="plats" class="titre">ici commence ton aventure</h2>
+                    <h2 id="plats" class="titre">Les plats</h2>
                     <br/>
                     {% for plat in plats %}
                         <div class="produit">
                             <h3 class="nom"><u>{{ plat.nom }}</u> {{ plat.prix }} €</h3>
-                            <br/>
-                            {% if plat.hasDescription %}
-                                <h4 class="description">{{ plat.description }}</h4>
-                            {% endif %}
                         </div>
                         <br/>
                     {% endfor %}
                 </div>
                 <div class="viande">
-                    <h4>Les viandes aux choix :</h4>
+                    <h4>*Les viandes aux choix :</h4>
                     <br/>
                     <h5 class="description">bacon, saucisses, hache de boeuf frais, effiloché de canard</h5>
-                </div>
-                <br/>
-                <div class="normands container">
-                    <h2 id="normands" class="titre">l'aventure normande</h2>
-                    <br/>
-                    {% for normand in normands %}
-                        <div class="produit">
-                            <h3 class="nom"><u>{{ normand.nom }}</u> {{ normand.prix }} €</h3>
-                            <br/>
-                            {% if normand.hasDescription %}
-                                <h4 class="description">{{ normand.description }}</h4>
-                            {% endif %}
-                        </div>
-                    {% endfor %}
                 </div>
             </div>
             <div class="container">
@@ -45,7 +27,7 @@
                     <br/>
                     <br/>
                     <br/>
-                    <h2 id="frites" class="titre"><u>petite aventure</u></h2>
+                    <h2 id="frites" class="titre"><u>Les frites portions</u></h2>
                     <img class="boussole" src="{{ asset('images/boussole.png') }}"/>
                     <br/>
                     <br/>
@@ -53,9 +35,6 @@
                     {% for frite in frites %}
                         <div class="produit">
                             <h3 class="nom">{{ frite.nom }} {{ frite.prix }} €</h3>
-                            {% if frite.hasDescription %}
-                                <h4 class="description">{{ frite.description }}</h4>
-                            {% endif %}
                         </div>
                         <br/>
                     {% endfor %}
@@ -63,43 +42,31 @@
             </div>
             <div class="container">
                 <div class="autres container">
-                    <h2 id="autres" class="titre">un petit road trip ?</h2>
+                    <h2 id="autres" class="titre">Petites faim</h2>
                     <br/>
                     {% for autre in autres %}
                         <div class="produit">
                             <h3 class="nom">{{ autre.nom }}  {{ autre.prix }} €</h3>
-                            <br/>
-                            {% if autre.hasDescription %}
-                                <h4 class="description">{{ autre.description }}</h4>
-                            {% endif %}
                         </div>
                     {% endfor %}
                 </div>
                 <br/>
                 <div class="desserts container">
-                    <h2 id="desserts" class="titre">fin de l'aventure</h2>
+                    <h2 id="desserts" class="titre">Desert</h2>
                     <br/>
                     {% for dessert in desserts %}
                         <div class="produit">
                             <h3 class="nom">{{ dessert.nom }}  {{ dessert.prix }} €</h3>
-                            <br/>
-                            {% if dessert.hasDescription %}
-                                <h4 class="description">{{ dessert.description }}</h4>
-                            {% endif %}
                         </div>
                     {% endfor %}
                 </div>
                 <br/>
                 <div class="boissons container">
-                    <h2 id="boissons" class="titre">les breuvages !</h2>
+                    <h2 id="boissons" class="titre">Les breuvages !</h2>
                     <br/>
                     {% for boisson in boissons %}
                         <div class="produit">
                             <h3 class="nom">{{ boisson.nom }}  {{ boisson.prix }} €</h3>
-                            <br/>
-                            {% if boisson.hasDescription %}
-                                <h4 class="description">{{ boisson.description }}</h4>
-                            {% endif %}
                         </div>
                     {% endfor %}
                 </div>
