--- a/templates/carte/index.html.twig
+++ b/templates/carte/index.html.twig
@@ -28,7 +28,7 @@
                     <br/>
                     <br/>
                     <h2 id="frites" class="titre"><u>Les frites portions</u></h2>
-                    <img class="boussole" src="{{ asset('images/boussole.png') }}"/>
+                    <img class="boussole" src="{{ asset('images/logos/boussole.png') }}"/>
                     <br/>
                     <br/>
                     <br/>
@@ -74,7 +74,7 @@
         </div>
         <h3 id="voyage">Bon voyage !</h3>
         <div class="pied">
-            <img class="logo w-25" src="{{ asset('images/logo.jpg') }}" alt="logo"/>
+            <img class="logo w-25" src="{{ asset('images/logos/icon.jpg') }}" alt="logo"/>
             <img class="imgfrite w-25" src="{{ asset('images/poutine.png') }}" alt="frite"/>
             <div class="coordonnes">
                 <p>
