--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -2,8 +2,8 @@
 
 {% block body %}
     <div class="body">
-        <h1 id="titre" class="text-center">FoodTruck, La Québecoise</h1>
-        <h2 class="text-center">Le Québec en Normandie</h2>
+        <h1 id="titre" class="text-center">FoodTruck, T'as La Frite </h1>
+        <h2 class="text-center">La cuisine du moment</h2>
         <br/>
         <div id="carl-index" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
@@ -27,23 +27,23 @@
                     <div class="carousel-item active">
                         <img src="{{ asset('images/poutine.jpg') }}" class="d-block rounded img-fluid w-100" alt="p1">
                         <div class="carousel-caption d-none d-md-block">
-                            <h5 class="text-black">La Poutine unique</h5>
-                            <p class="text-black">A la Canadienne ou Française</p>
+                            <h5 class="text-black"></h5>
+                            <p class="text-black"></p>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <img src="{{ asset('images/frais.jpg') }}" class="d-block rounded img-fluid w-100" alt="p2">
                         <div class="carousel-caption d-none d-md-block">
-                            <h5 class="text-black">Produits Frais</h5>
-                            <p class="text-black">Fait avec 100% de produits frais</p>
+                            <h5 class="text-black"></h5>
+                            <p class="text-black"></p>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <img src="{{ asset('images/viande-francaise.jpg') }}" class="d-block rounded img-fluid w-100"
                              alt="p3">
                         <div class="carousel-caption d-none d-md-block">
-                            <h5 class="text-black">Viande Française</h5>
-                            <p class="text-black">La viande est française et fraiche</p>
+                            <h5 class="text-black"></h5>
+                            <p class="text-black"></p>
                         </div>
                     </div>
                 </div>
