fix src of images

--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -14,13 +14,13 @@
                 <div class="col-sm">
                     <h3 class="text-decoration-underline">Gestion des Produits</h3>
                     <a href="{{ path('app_produit_index') }}"><img class="border border-dark"
-                                                                   src="{{ asset('images/produits.png') }}" width="250"
+                                                                   src="{{ asset('images/logos/produits.png') }}" width="250"
                                                                    alt="produits"/></a>
                 </div>
                 <div class="col-sm">
                     <h3 class="text-decoration-underline">Gestion des Localisations</h3>
                     <a href="{{ path('app_localisation_index') }}"><img class="border border-dark"
-                                                                        src="{{ asset('images/localisations.png') }}"
+                                                                        src="{{ asset('images/logos/localisations.png') }}"
                                                                         width="250" alt="localisations"/></a>
                 </div>
             </div>
@@ -28,13 +28,13 @@
                 <div class="col-sm">
                     <h3 class="text-decoration-underline">Gestion des Ventes</h3>
                     <a href="{{ path('app_vente') }}"><img class="border border-dark"
-                                                           src="{{ asset('images/ventes.png') }}" width="250"
+                                                           src="{{ asset('images/logos/ventes.png') }}" width="250"
                                                            alt="ventes"/></a>
                 </div>
                 <div class="col-sm">
                     <h3 class="text-decoration-underline">Gestion des Matières Premières</h3>
                     <a href="{{ path('app_matiere_index') }}"><img class="border border-dark"
-                                                                   src="{{ asset('images/achats.png') }}" width="250"
+                                                                   src="{{ asset('images/logos/achats.png') }}" width="250"
                                                                    alt="ventes"/></a>
                 </div>
             </div>
