--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -34,8 +34,14 @@
                 <div class="col-sm">
                     <h3 class="text-decoration-underline">Gestion des Matières Premières</h3>
                     <a href="{{ path('app_matiere_index') }}"><img class="border border-dark"
+                                                                   src="{{ asset('images/logos/matiere.png') }}" width="250"
+                                                                   alt="matiere"/></a>
+                </div>
+                <div class="col-sm">
+                    <h3 class="text-decoration-underline">Gestion des Achats</h3>
+                    <a href="{{ path('app_index') }}"><img class="border border-dark"
                                                                    src="{{ asset('images/logos/achats.png') }}" width="250"
-                                                                   alt="ventes"/></a>
+                                                                   alt="achats"/></a>
                 </div>
             </div>
         </div>
