--- a/templates/avis/index.html.twig
+++ b/templates/avis/index.html.twig
@@ -1,43 +1,69 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Avis index{% endblock %}
-
 {% block body %}
-    <h1>Avis index</h1>
-
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Nom</th>
-                <th>Prenom</th>
-                <th>Note</th>
-                <th>IP</th>
-                <th>Date</th>
-                <th>actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for avi in avis %}
-            <tr>
-                <td>{{ avi.id }}</td>
-                <td>{{ avi.nom }}</td>
-                <td>{{ avi.prenom }}</td>
-                <td>{{ avi.note }}</td>
-                <td>{{ avi.ip}}</td>
-                <td>{{ avi.date ? avi.date|date('d-m-Y') : '' }}</td>
-                <td>
-                    <a href="{{ path('app_avis_show', {'id': avi.id}) }}">show</a>
-                    <a href="{{ path('app_avis_edit', {'id': avi.id}) }}">edit</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="6">no records found</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
-
-    <a href="{{ path('app_avis_new') }}">Create new</a>
+    {% for flash in app.flashes('error') %}
+        <div class="text-center alert alert-danger">
+            <strong>{{ flash }}</strong>
+        </div>
+    {% endfor %}
+    <div class="container">
+        <h1 class="text-center text-decoration-underline">Vos avis</h1>
+        <div class="avis grid center text-center d-flex flex-wrap justify-content-center">
+            {% for avi in avis %}
+                <div class="avi border border-dark border-1 p-2 m-3">
+                    <h3>{{ avi.nom }} {{ avi.prenom }}</h3>
+                    <h4>{{ avi.date ? avi.date|date('d/m/Y') : '' }}</h4>
+                    <h5>{{ avi.description }}</h5>
+                    {% if avi.note == 1 %}
+                        <div class="star">
+                            <i class="fa-solid fa-star star gold"></i>
+                            <i class="fa-regular fa-star star"></i>
+                            <i class="fa-regular fa-star star"></i>
+                            <i class="fa-regular fa-star star"></i>
+                            <i class="fa-regular fa-star star"></i>
+                        </div>
+                    {% endif %}
+                    {% if avi.note == 2 %}
+                        <div class="star">
+                            <i class="fa-solid fa-star star gold"></i>
+                            <i class="fa-solid fa-star star gold"></i>
+                            <i class="fa-regular fa-star star"></i>
+                            <i class="fa-regular fa-star star"></i>
+                            <i class="fa-regular fa-star star"></i>
+                        </div>
+                    {% endif %}
+                    {% if avi.note == 3 %}
+                        <div class="star">
+                            <i class="fa-solid fa-star star gold"></i>
+                            <i class="fa-solid fa-star star gold"></i>
+                            <i class="fa-solid fa-star star gold"></i>
+                            <i class="fa-regular fa-star star"></i>
+                            <i class="fa-regular fa-star star"></i>
+                        </div>
+                    {% endif %}
+                    {% if avi.note == 4 %}
+                        <div class="star">
+                            <i class="fa-solid fa-star star gold"></i>
+                            <i class="fa-solid fa-star star gold"></i>
+                            <i class="fa-solid fa-star star gold"></i>
+                            <i class="fa-solid fa-star star gold"></i>
+                            <i class="fa-regular fa-star star"></i>
+                        </div>
+                    {% endif %}
+                    {% if avi.note == 5 %}
+                        <div class="star">
+                            <i class="fa-solid fa-star gold"></i>
+                            <i class="fa-solid fa-star gold"></i>
+                            <i class="fa-solid fa-star gold"></i>
+                            <i class="fa-solid fa-star gold"></i>
+                            <i class="fa-solid fa-star gold"></i>
+                        </div>
+                    {% endif %}
+                </div>
+            {% endfor %}
+        </div>
+        <a class="d-flex flex-wrap justify-content-center text-decoration-none" href="{{ path('app_avis_new') }}">
+            <input type="button" value="Donnez le votre"/>
+        </a>
+    </div>
 {% endblock %}
